2012-11-14 unix-privesc-check trunk

* Tidied docs/CHANGELOG
* Updated docs/HACKING
* Tidied upc.sh

-- Tim Brown <timb@nth-dimension.org.uk>

2012-11-05 unix-privesc-check trunk

* Add support for PostgreSQL
  * Added lib/checks/postgresql_configuration
  * Added lib/checks/postgresql_connection
  * Added lib/checks/postgresql_trust
  * Added lib/misc/postgresql
* Added lib/misc/ldap and lib/checks/ldap_authentication
* Added lib/misc/nis and lib/checks/nis_authentication
* Added lib/checks/privileged_arguments to verify if textual
  privileged files (like bash scripts) accept arguments from command line
* Added lib/misc/init and support in lib/misc/privileged
* Added security check to verify device mount options: dev, suid, user
* Added function file_is_basename to lib/misc/file
* Renamed lib/checks/devices to lib/checks/devices_permission

-- Bernardo Damele A. G. <bernardo.damele@gmail.com>

2012-11-02 unix-privesc-check trunk

* Bug fix: uname on Solaris returns SunOS
* Added lib/misc/device and lib/checks/devices to verify world-readable and
  world-writable permission on all device files including swap device(s)
* Improved lib/misc/cron to correctly handle PATH variable from /etc/crontab
  and to differentiate programs lauched by /etc/crontab with
  /etc/cron.[hourly|daily|monthly]
* Added lib/checks/privileged_environment_variables to verify if textual
  privileged files (like bash scripts) use environment variables
* Improved lib/checks/privileged_tmp to also process textual privileged
  files (like bash scripts)
* Added binary_matches_string_grep function to lib/misc/binary to avoid
  interpreting the pattern as an extended regular expression

-- Bernardo Damele A. G. <bernardo.damele@gmail.com>

2012-11-01 unix-privesc-check trunk

* Bug fix: Return value in lib/misc/binary
* Bug fix: Avoid recursing the linker_list_dependencies function
* Added lib/misc/inittab and support in lib/misc/privileged